# GeoAgent

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.html  README.md  README.txt  __init__.py  geo_agent.py  geo_agent_dialog.py  geo_agent_dialog_base.ui  metadata.txt  package_plugin.py  pb_tool.cfg  pyproject.toml  resources.py  resources.qrc
_extra/: graph_structure_print copy.ipynb  graph_structure_print.ipynb
agents/: __init__.py  general.py  geoprocessing_flow.py  graph.py  multi_step_processing.py  processing.py  schemas.py  states.py  workflow.py
config/: constants.py  settings.py
dialogs/: geo_agent_dialog.py  geo_agent_dialog_base.ui
help/source/: conf.py  index.rst
llm/: __init__.py  client.py  worker.py
logger/: __init__.py  logger.py  processing_logger.py
paper/: paper.bib  paper.md
paper/demo_dataset/shp/: CrownLandTrails.sbn  CrownLandTrails.sbx  rivers.dbf  rivers.qmd  rivers.shp  rivers.shx
paper/demo_dataset/tiff/: dem_orginal.tif
prompts/: system.py
test/: test_geo_agent_dialog.py  test_resources.py
tools/: __init__.py  commons.py  filters.py  geoprocessing.py  io.py
utils/: __init__.py  canvas_refresh.py  dependencies.py  layer_matching.py  layer_operations.py  markdown_converter.py  project_loader.py
