[project]
name = "geo-agent"
version = "0.3.0"
description = "Plugin for QGIS interaction using LLM. Enables geospatial analysis and data processing through natural language commands."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.4",
    "langchain-google-genai>=4.1.2",
    "langchain-openai>=1.1.6",
    "langchain-ollama>=0.1.0",
    "langgraph>=1.0.5",
    "requests>=2.32.5",
    "markdown>=3.4.0",
]
